[project]
name = "swarm-intelligence-lab"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "pytest>=8.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

